--- a/css/blog.css
+++ b/css/blog.css
@@ -67,3 +67,16 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 768px) {
   .h-md-250 { height: 250px; }
 }
+
+.centralizar {
+  text-align: center;
+}
+
+.negrito {
+  font-weight: bold;
+}
+
+button a {
+  color: black;
+  text-decoration: none;
+}
